--- a/Graphics/Graphics.vcxproj
+++ b/Graphics/Graphics.vcxproj
@@ -70,11 +70,11 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>$(SolutionDir)\external\glfw-3.3.2\include;$(SolutionDir)\external\glew-2.2.0\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)\src;$(SolutionDir)\external\glfw-3.3.2\include;$(SolutionDir)\external\glew-2.2.0\include;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)\external\glfw-3.3.2\lib-vc2019;$(SolutionDir)\external\glew-2.2.0\lib\Release\Win32;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(SolutionDir)\external\glfw-3.3.2\include;$(SolutionDir)\external\glew-2.2.0\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)\src;$(SolutionDir)\external\glfw-3.3.2\include;$(SolutionDir)\external\glew-2.2.0\include;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)\external\glfw-3.3.2\lib-vc2019;$(SolutionDir)\external\glew-2.2.0\lib\Release\Win32;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -135,7 +135,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Source.cpp" />
+    <ClCompile Include="src\business.objects.geometry\Vector.cpp" />
+    <ClCompile Include="src\business.objects.geometry\Point.cpp" />
+    <ClCompile Include="src\business.objects\Camera.cpp" />
     <ClCompile Include="src\main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\business.objects.geometry\Vector.h" />
+    <ClCompile Include="src\business.objects.geometry\Point.h" />
+    <ClInclude Include="src\business.objects\Camera.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
