trying to add rotation control

--- a/Graphics/Graphics.vcxproj
+++ b/Graphics/Graphics.vcxproj
@@ -137,6 +137,7 @@
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="src\business.objects.geometry\Vector.cpp" />
     <ClCompile Include="src\business.objects.geometry\Point.cpp" />
+    <ClCompile Include="src\business.objects.physics\SpaceObject.cpp" />
     <ClCompile Include="src\business.objects\Camera.cpp" />
     <ClCompile Include="src\event.handlers\InputHandler.cpp" />
     <ClCompile Include="src\main.cpp" />
@@ -144,6 +145,7 @@
   <ItemGroup>
     <ClInclude Include="src\business.objects.geometry\Vector.h" />
     <ClCompile Include="src\business.objects.geometry\Point.h" />
+    <ClInclude Include="src\business.objects.physics\SpaceObject.h" />
     <ClInclude Include="src\business.objects\Camera.h" />
     <ClInclude Include="src\event.handlers\InputHandler.h" />
   </ItemGroup>
